--- a/estilos/plantilla.css
+++ b/estilos/plantilla.css
@@ -12,7 +12,11 @@ header {
 
 h1 {
     font-size: 2.5em;
-        font-weight: 800;
+    font-weight: 800;
+}
+
+h1 a {
+    color: #FFFFFF
 }
   
 h2 {
@@ -26,7 +30,7 @@ h3 {
 }
 
 a:visited {
-    color: #A00000;
+    color: #DB0000;
 }
 
 header {
