--- a/estilos/plantilla.css
+++ b/estilos/plantilla.css
@@ -74,4 +74,9 @@ header nav{
       margin-left: 5%;
       margin-bottom: 5%;
     }
+
+    img {
+        width: 100%;
+        height: auto;
+    }
  }
